--- a/eng/pipelines/wesh-test.yml
+++ b/eng/pipelines/wesh-test.yml
@@ -19,11 +19,12 @@ steps:
   displayName: list npm config
 
 - pwsh: |
-
+    npm install @rushstack/node-core-library
+    npm install @microsoft/api-extractor-model
     $NpmDevopsFeedRegistry = "https://pkgs.dev.azure.com/azure-sdk/public/_packaging/azure-sdk-for-js/npm/registry/"
     $apiviewParser = "@azure-tools/ts-genapi@2.0.3"
     Write-Host "Installing $($apiviewParser)"
-    npm install $apiviewParser --registry $NpmDevopsFeedRegistry --userconfig=/dev/null
+    npm install $apiviewParser --registry $NpmDevopsFeedRegistry
 
     if (Test-Path "/usr/local/etc/npmrc") { get-content /usr/local/etc/npmrc }
     if (Test-Path "$HOME/.npmrc") { get-content $HOME/.npmrc }
