--- a/sdk/documenttranslator/ai-document-translator-rest/tsconfig.json
+++ b/sdk/documenttranslator/ai-document-translator-rest/tsconfig.json
@@ -2,19 +2,11 @@
   "extends": "../../../tsconfig",
   "compilerOptions": {
     "paths": {
-      "@azure-rest/ai-document-translator": [
-        "./src/index"
-      ]
+      "@azure-rest/ai-document-translator": ["./src/index"]
     },
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
     "rootDir": "."
   },
-  "include": [
-    "src/**/*.ts",
-    "src/**/*.mts",
-    "src/**/*.cts",
-    "samples-dev/**/*.ts",
-    "test/**/*.ts"
-  ]
+  "include": ["src/**/*.ts", "src/**/*.mts", "src/**/*.cts", "samples-dev/**/*.ts", "test/**/*.ts"]
 }
