--- a/sdk/contentsafety/ai-content-safety-rest/tsconfig.json
+++ b/sdk/contentsafety/ai-content-safety-rest/tsconfig.json
@@ -1,12 +1,21 @@
 {
   "extends": "../../../tsconfig",
   "compilerOptions": {
-    "outDir": "./dist-esm",
-    "declarationDir": "./types",
-    "lib": ["es6", "dom"],
+    "lib": ["dom"],
     "paths": {
       "@azure-rest/ai-content-safety": ["./src/index"]
-    }
+    },
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "rootDir": "."
   },
-  "include": ["src/**/*.ts", "./test/**/*.ts", "samples-dev/**/*.ts"]
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.mts",
+    "src/**/*.cts",
+    "samples-dev/**/*.ts",
+    "test/**/*.ts",
+    "test/**/*.mts",
+    "test/**/*.cts"
+  ]
 }
