--- a/sdk/core/ci.yml
+++ b/sdk/core/ci.yml
@@ -64,6 +64,8 @@ extends:
         safeName: azurelogger
       - name: azure-core-http-compat
         safeName: azurecorehttpcompat
+      - name: azure-core-http
+        safeName: azurecorehttp
       - name: azure-core-sse
         safeName: azurecoresse
       - name: typespec-ts-http-runtime
