--- a/sdk/core/core-http/package.json
+++ b/sdk/core/core-http/package.json
@@ -88,7 +88,7 @@
     "test": "npm run clean && tsc -p tsconfig.es.json  && npm run unit-test:node && dev-tool run bundle && npm run unit-test:browser && npm run integration-test",
     "unit-test": "npm run unit-test:node && npm run unit-test:browser",
     "unit-test:browser": "karma start --single-run",
-    "unit-test:node": "cross-env TS_NODE_FILES=true mocha -r esm -r ts-node/register --reporter ../../../common/tools/mocha-multi-reporter.js --timeout 500000 --full-trace --exclude \"test/**/*.browser.ts\" \"test/**/*.ts\""
+    "unit-test:node": "mocha -r tsx --reporter ../../../common/tools/mocha-multi-reporter.js --timeout 500000 --full-trace --exclude \"test/**/*.browser.ts\" \"test/**/*.ts\""
   },
   "sideEffects": false,
   "nyc": {
@@ -134,15 +134,14 @@
   "devDependencies": {
     "@azure/eslint-plugin-azure-sdk": "^3.0.0",
     "@azure/dev-tool": "^1.0.0",
-    "@azure/logger-js": "^1.0.2",
     "@azure-tools/test-utils": "^1.0.0",
     "@microsoft/api-extractor": "^7.31.1",
     "@opentelemetry/api": "^1.4.0",
     "@types/chai": "^4.1.6",
     "@types/express": "^4.16.0",
-    "@types/mocha": "^7.0.2",
-    "@types/node": "^14.0.0",
-    "@types/sinon": "^9.0.4",
+    "@types/mocha": "^10.0.0",
+    "@types/node": "^18.0.0",
+    "@types/sinon": "^17.0.0",
     "@types/trusted-types": "^2.0.0",
     "@types/uuid": "^8.0.0",
     "@types/xml2js": "^0.4.11",
@@ -159,18 +158,18 @@
     "karma-firefox-launcher": "^1.1.0",
     "karma-mocha": "^2.0.1",
     "karma-sourcemap-loader": "^0.3.8",
-    "mocha": "^7.1.1",
+    "mocha": "^10.0.0",
     "mocha-junit-reporter": "^2.0.0",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.0.0",
-    "prettier": "^2.5.1",
-    "puppeteer": "^19.2.2",
+    "prettier": "^3.3.3",
+    "puppeteer": "^23.0.2",
     "regenerator-runtime": "^0.13.3",
     "rimraf": "^3.0.0",
     "shx": "^0.3.2",
-    "sinon": "^9.0.2",
-    "ts-node": "^10.0.0",
-    "typescript": "~4.8.0",
+    "sinon": "^19.0.0",
+    "tsx": "^4.17.0",
+    "typescript": "~5.6.2",
     "uglify-js": "^3.4.9",
     "xhr-mock": "^2.4.1"
   }
