--- a/sdk/devopsinfrastructure/arm-devopsinfrastructure/package.json
+++ b/sdk/devopsinfrastructure/arm-devopsinfrastructure/package.json
@@ -46,6 +46,7 @@
   "bugs": {
     "url": "https://github.com/Azure/azure-sdk-for-js/issues"
   },
+  "homepage": "https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/devopsinfrastructure/arm-devopsinfrastructure/README.md",
   "prettier": "@azure/eslint-plugin-azure-sdk/prettier.json",
   "//metadata": {
     "constantPaths": [
