--- a/sdk/vision/ai-vision-image-analysis-rest/tsconfig.json
+++ b/sdk/vision/ai-vision-image-analysis-rest/tsconfig.json
@@ -1,5 +1,15 @@
 {
   "extends": "../../../tsconfig",
-  "compilerOptions": { "outDir": "./dist-esm", "declarationDir": "./types" },
-  "include": ["src/**/*.ts", "./test/**/*.ts"]
+  "compilerOptions": {
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "rootDir": "."
+  },
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.mts",
+    "src/**/*.cts",
+    "samples-dev/**/*.ts",
+    "test/**/*.ts"
+  ]
 }
