--- a/sdk/vision/ai-vision-image-analysis-rest/tsconfig.json
+++ b/sdk/vision/ai-vision-image-analysis-rest/tsconfig.json
@@ -1,9 +1,20 @@
 {
   "extends": "../../../tsconfig",
   "compilerOptions": {
+    "paths": {
+      "@azure-rest/ai-vision-image-analysis": ["./src/index"]
+    },
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
     "rootDir": "."
   },
-  "include": ["src/**/*.ts", "src/**/*.mts", "src/**/*.cts", "samples-dev/**/*.ts", "test/**/*.ts"]
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.mts",
+    "src/**/*.cts",
+    "samples-dev/**/*.ts",
+    "test/**/*.ts",
+    "test/**/*.mts",
+    "test/**/*.cts"
+  ]
 }
