--- a/sdk/healthinsights/health-insights-cancerprofiling-rest/tsconfig.json
+++ b/sdk/healthinsights/health-insights-cancerprofiling-rest/tsconfig.json
@@ -2,9 +2,7 @@
   "extends": "../../../tsconfig",
   "compilerOptions": {
     "paths": {
-      "@azure-rest/health-insights-cancerprofiling": [
-        "./src/index"
-      ]
+      "@azure-rest/health-insights-cancerprofiling": ["./src/index"]
     },
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
