--- a/sdk/healthinsights/health-insights-radiologyinsights-rest/tsconfig.json
+++ b/sdk/healthinsights/health-insights-radiologyinsights-rest/tsconfig.json
@@ -2,11 +2,21 @@
   "extends": "../../../tsconfig",
   "compilerOptions": {
     "paths": {
-      "@azure-rest/health-insights-radiologyinsights": ["./src/index"]
+      "@azure-rest/health-insights-radiologyinsights": [
+        "./src/index"
+      ]
     },
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
-    "rootDir": "."
+    "rootDir": ".",
   },
-  "include": ["src/**/*.ts", "src/**/*.mts", "src/**/*.cts", "samples-dev/**/*.ts", "test/**/*.ts"]
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.mts",
+    "src/**/*.cts",
+    "samples-dev/**/*.ts",
+    "test/**/*.ts",
+    "test/**/*.mts",
+    "test/**/*.cts"
+  ]
 }
